--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="//fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
     <link rel="stylesheet" href="/dist/image-gallery.css"/>
-    <title>Newport Product Gallery</title>
+    <title>Newport Product Gallery | by Deus</title>
   </head>
   <body>
     <div id="root" class="gallery-container"></div>
